[tool.poetry]
name = "gigamesh"
version = "0.1.0"
description = ""
authors = ["David Oscanoa"]
license = "GPL2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mido = "^1.3.0"
python-rtmidi = "^1.5.7"
alsa-midi = "^1.0.2"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
xdg-base-dirs = "^6.0.1"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
